Added photo upload feature

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "sohn12",
+    "ApiKey": "557921725837772",
+    "ApiSecret": "6LLaMsac2rqiWXw6FaAqv-ZHKKI"
+  }
 }
